Fix header gap left by removed banner

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ html {
 /* Header - full width with wider spacing */
 .header {
   position: fixed;
-  top: 40px;
+  top: 0;
   left: 0;
   right: 0;
   width: 100vw;
